--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,15 +17,15 @@ spring:
       enabled: true
 
   datasource:
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    #url: jdbc:mysql://192.168.10.200:3306/whole_process_rrs?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    #username: root
-    #password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.10.200:3306/endpoint_analysis_service?serverTimezone=Asia/Shanghai&allowMultiQueries=true&useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
 
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://127.0.0.1:59000/./EndpointAnalysisService
-    username:
-    password:
+    #driver-class-name: org.h2.Driver
+    #url: jdbc:h2:tcp://127.0.0.1:59000/./EndpointAnalysisService
+    #username:
+    #password:
 
   jackson:
     time-zone: GMT+8
@@ -34,7 +34,7 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: false
