--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -15,10 +15,13 @@
     "axios": "^1.8.4",
     "bootstrap-icons": "^1.11.3",
     "element-plus": "^2.9.7",
+    "json-editor-vue": "^0.18.1",
     "marked": "^15.0.7",
+    "monaco-editor-vue3": "^0.1.10",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-json-editor": "^1.1.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
