--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@iconify/json": "^2.2.373",
     "axios": "^1.8.4",
     "bootstrap-icons": "^1.11.3",
     "element-plus": "^2.9.7",
@@ -27,6 +28,7 @@
     "vue3-json-editor": "^1.1.5"
   },
   "devDependencies": {
+    "@iconify/vue": "^5.0.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -34,6 +36,8 @@
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.6.2",
     "typescript": "~5.8.0",
+    "unplugin-icons": "^22.2.0",
+    "unplugin-vue-components": "^29.0.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
