--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>3.0.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
