--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -36,6 +36,7 @@
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.6.2",
+    "sass-embedded": "^1.93.2",
     "typescript": "~5.8.0",
     "unplugin-icons": "^22.2.0",
     "unplugin-vue-components": "^29.0.0",
