--- a/pdm/eas.pdma.json
+++ b/pdm/eas.pdma.json
@@ -4,7 +4,7 @@
   "avatar": "",
   "version": "4.9.4",
   "createdTime": "2025-5-31 18:54:43",
-  "updatedTime": "2025-10-19 11:55:55",
+  "updatedTime": "2025-10-19 12:23:40",
   "dbConns": [],
   "profile": {
     "default": {
@@ -8348,7 +8348,7 @@
           "len": "",
           "scale": "",
           "primaryKey": false,
-          "notNull": true,
+          "notNull": false,
           "autoIncrement": false,
           "defaultValue": "",
           "hideInGraph": false,
