feat:维护中心页面更新 添加 "菜单重置" 功能

--- a/pom.xml
+++ b/pom.xml
@@ -288,6 +288,7 @@
                     <include>**/**.woff</include>
                     <include>**/**.woff2</include>
                     <include>**/**.jpeg</include>
+                    <include>**/**.sql</include>
                 </includes>
                 <excludes>
                     <exclude>views/webconsole/node_modules/**</exclude>
