--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -26,7 +26,8 @@
     "vue": "^3.5.13",
     "vue-json-pretty": "^2.5.0",
     "vue-router": "^4.5.0",
-    "vue3-json-editor": "^1.1.5"
+    "vue3-json-editor": "^1.1.5",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@iconify/vue": "^5.0.0",
