--- a/src/main/resources/views/webconsole/package.json
+++ b/src/main/resources/views/webconsole/package.json
@@ -31,13 +31,17 @@
   },
   "devDependencies": {
     "@iconify/vue": "^5.0.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "sass-embedded": "^1.93.2",
+    "tailwindcss": "^4.1.16",
     "typescript": "~5.8.0",
     "unplugin-icons": "^22.2.0",
     "unplugin-vue-components": "^29.0.0",
